<resources>
    <string name="app_name">FoodPicker</string>
    <string name="action_info">Info</string>
    <string name="ranking">Ranking</string>
    <string name="home">Home</string>
    <string name="vegetarian">Veggie</string>
    <string name="no_data">No data</string>
    <string name="refresh">Refresh_Icon</string>
    <string name="delete">Delete</string>
    <string name="search">Search</string>
    <string name="food">Food</string>
    <string name="carbohydrates">Carbohydrates (g)</string>
    <string name="fats">Fats (g)</string>
    <string name="protein">Protein (g)</string>
    <string name="calories">Calories</string>
    <string name="time_min">Time (min)</string>
    <string name="save">Save</string>
</resources>
